# launchpilot

./: .env.example  .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/agents/: execution_agent.py  lead_pipeline_agent.py  positioning_agent.py  research_agent.py  shared_context.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/integrations/: auth0_github_connector.py  auth0_google_connector.py  backboard_client.py  github_client.py  resend_client.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/models/: approval.py  chat.py  execution.py  project.py  workspace.py
apps/api/app/prompts/: distribution_prompt.py  execution_prompt.py  lead_enrichment_prompt.py  lead_scout_prompt.py  positioning_prompt.py  research_prompt.py  writing_agent_prompt.py
apps/api/app/routers/: __init__.py  approvals.py  chat.py  connectors.py  execution.py  me.py  positioning.py  projects.py  research.py  utils.py
apps/api/app/schemas/: execution.py  positioning.py  project.py  research.py
apps/api/app/security/: auth0.py
apps/api/app/services/: backboard_project_state_service.py  backboard_stage_service.py  contact_sanitizer.py  execution_service.py  lead_scoring_service.py  memory_service.py  project_service.py
apps/api/migrations/versions/: 0002_add_agent_chat_messages.py  0003_add_chat_sequence_field.py  0004_add_indexes.py
apps/api/tests/: test_api_smoke.py
apps/web/: .env.local.example  middleware.ts  tailwind.config.ts  (+1 more)
(+74 files in other folders)
