[project]
name = "growth-launchpad-api"
version = "0.1.0"
description = "FastAPI backend for Growth Launchpad"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "resend>=2.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
